# fun

./: .gitignore  README.md  pyproject.toml
collatz_conjecture/: README.md  collatz.py
encoding/: base64_dict.py  extended_64.py  test.py
grid_sort/: README.md  graph_alg.py  graph_alg_2.py
json_to_csv/: json_to_csv.py
