[tool.poetry]
name = "fun"
version = "0.1.0"
description = ""
authors = ["Raleigh Barden <rbardenksu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.11.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
