[tool.poetry]
name = "fun"
version = "0.1.0"
description = ""
authors = ["Raleigh Barden <rbardenksu@gmail.com>"]
readme = "README.md"
packages = [
	{ include = "collatz_conjecture" },
	{ include = "encoding" },
	{ include = "grid_sort" },
]

[tool.poetry.dependencies]
python = ">=3.12"
black = "^23.11.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
