[tool.poetry]
name = "fun"
version = "0.1.0"
description = ""
authors = ["Raleigh Barden <rbardenksu@gmail.com>"]
readme = "README.md"
packages = [
	{ include = "collatz_conjecture" },
	{ include = "encoding" },
	{ include = "grid_sort" },
]

[tool.poetry.dependencies]
python = ">=3.12"
black = "^23.11.0"
tqdm = "^4.66.1"
numpy = "^2.1.1"
ipykernel = "^6.29.5"
requests = "^2.32.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
